# AutoMan_Project

./: .gitignore  .gitmodules  README.md  robot.rviz
src/dual_UR5/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dual_ur5/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dual_ur5/config/: arm_1_config.yaml  arm_2_config.yaml  ur5e_config.yaml
src/dual_ur5/dual_ur5/: for_kin_task_planner.py  gui_bridge.py  inv_kin.py  set_joint_angles.py  simple_task_executor.py  task_planner.py
src/dual_ur5/launch/: spawn_dual_arms.launch.py
src/dual_ur5/models/laptop/dae_parts/: back_plate.dae  back_plate_screw_1.dae  back_plate_screw_10.dae  back_plate_screw_11.dae  back_plate_screw_12.dae  back_plate_screw_13.dae  back_plate_screw_14.dae  back_plate_screw_2.dae  back_plate_screw_3.dae  back_plate_screw_4.dae  back_plate_screw_5.dae  back_plate_screw_6.dae  back_plate_screw_7.dae  back_plate_screw_8.dae  back_plate_screw_9.dae  battery_1.dae  battery_2.dae  copper_plate_1.dae  copper_plate_2.dae  copper_plate_3.dae  copper_plate_screw_1.dae  copper_plate_screw_2.dae  copper_plate_screw_3.dae  copper_plate_screw_4.dae  copper_plate_screw_5.dae  cpu.dae  fan_1.dae  fan_2.dae  motherboard.dae  ram_1.dae  ram_2.dae  ssd.dae
src/dual_ur5/urdf/: dual_scene.urdf.xacro  dual_ur5e.urdf.xacro  ur5e.urdf  ur5e_macro.xacro
src/dual_ur5/urdf/meshes/collision/: Pry_tool.stl  vacuum_gripper.stl
src/dual_ur5/worlds/: empty_world.world
src/dual_ur5_moveit_config/: .setup_assistant  package.xml
src/perception/: package.xml  setup.py
(+20 files in other folders)
